--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             <div class="layers__item layer-3">
                 <div class="hero-content">
                     <h1>Natural Forest <span> HTML / CSS </span></h1>
-                    <div class="hero-content__p">creating a beautiful 3D website with 'lens effect'</div>
+                    <div class="hero-content__p">Creating a beautiful 3D website with 'lens effect'</div>
                     <button class="button-start">Start Learning</button>
                 </div>
             </div>
